--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+.App-Counter {
+    text-align: center;
+    margin-top: 150px;
+    width: 400px;
+    height: 300px;
+    border: 5px solid blue;
+    border-radius: 20px;
+    font-size: 55px;
+    margin-left: auto;
+    background-color: dodgerblue;
+    display: inline-block;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Menu {
+    text-align: center;
+    margin-top: 150px;
+    width: 400px;
+    height: 300px;
+    border: 5px solid blue;
+    border-radius: 20px;
+    font-size: 30px;
+    margin-left: auto;
+    background-color: dodgerblue;
+    display: inline-block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
